[gd_scene load_steps=17 format=3 uid="uid://e5nefeqvv66d"]

[ext_resource type="Script" uid="uid://dwmje6n7m1ip" path="res://scripts/player/player.gd" id="1_xhfnw"]
[ext_resource type="Script" uid="uid://c5h6mtgbt70v4" path="res://scripts/state_machine/state_machine.gd" id="2_6t5aa"]
[ext_resource type="Script" uid="uid://dd03qhd78hq3d" path="res://scripts/player/collision.gd" id="2_d2wvv"]
[ext_resource type="Script" uid="uid://ciyeqcbv66srx" path="res://scripts/player/states/idle.gd" id="3_6t5aa"]
[ext_resource type="Script" uid="uid://c6hexh55a2fm1" path="res://scripts/player/movement/hollow_knight_movemnt.gd" id="3_d2wvv"]
[ext_resource type="Script" uid="uid://tjonnyktixm3" path="res://scripts/player/health.gd" id="4_3v2ag"]
[ext_resource type="Script" uid="uid://hho1luvqsprw" path="res://scripts/player/states/run.gd" id="4_vgqql"]
[ext_resource type="Script" uid="uid://y6wiowo66kps" path="res://scripts/player/states/fall.gd" id="5_x3wgy"]
[ext_resource type="Script" uid="uid://bibmucmc3ek0s" path="res://scripts/player/states/jump.gd" id="6_3smsa"]
[ext_resource type="Script" uid="uid://ds6sl1fngx7d2" path="res://scripts/player/states/dash.gd" id="7_y4r1p"]
[ext_resource type="Script" uid="uid://cjjvlrv0gh2iv" path="res://scripts/player/timers/jump.gd" id="8_8erm5"]
[ext_resource type="Script" uid="uid://clwqpjdntciw1" path="res://scripts/player/timers/coyote.gd" id="9_ur7pv"]
[ext_resource type="Script" uid="uid://co5piylw2y1u7" path="res://scripts/player/states/dead.gd" id="11_jej6c"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kpjcp"]
height = 50.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jej6c"]
height = 50.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y4r1p"]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("movement", "health", "state_machine", "collision_controller", "jump_timer", "coyote_timer") groups=["player"]]
script = ExtResource("1_xhfnw")
movement = NodePath("PlayerMovement")
health = NodePath("PlayerHealth")
state_machine = NodePath("StateMachine")
collision_controller = NodePath("PlayerCollisionController")
jump_timer = NodePath("Timers/JumpTimer")
coyote_timer = NodePath("Timers/CoyoteTimer")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_kpjcp")
debug_color = Color(0.23921569, 0.12156863, 0.15686275, 1)

[node name="Dead" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 15)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_jej6c")
disabled = true
debug_color = Color(0.23921569, 0.12156863, 0.15686275, 1)

[node name="DashCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 10)
shape = SubResource("CapsuleShape2D_y4r1p")
disabled = true
debug_color = Color(0.23921569, 0.12156863, 0.15686275, 1)

[node name="PlayerCollisionController" type="Node" parent="." node_paths=PackedStringArray("collisions", "current_collision")]
script = ExtResource("2_d2wvv")
collisions = {
"dash": NodePath("../DashCollision"),
"dead": NodePath("../Dead"),
"default": NodePath("../Collision")
}
current_collision = NodePath("../Collision")
metadata/_custom_type_script = "uid://dd03qhd78hq3d"

[node name="PlayerMovement" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("3_d2wvv")
jump_force = 615.0
player = NodePath("..")
metadata/_custom_type_script = "uid://cj1s224kcep31"

[node name="PlayerHealth" type="Node" parent="."]
script = ExtResource("4_3v2ag")
metadata/_custom_type_script = "uid://tjonnyktixm3"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_6t5aa")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://c5h6mtgbt70v4"

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("3_6t5aa")
player = NodePath("../..")
metadata/_custom_type_script = "uid://ceuck38er24x7"

[node name="Run" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("4_vgqql")
player = NodePath("../..")
metadata/_custom_type_script = "uid://ceuck38er24x7"

[node name="Fall" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_x3wgy")
player = NodePath("../..")
metadata/_custom_type_script = "uid://dg6fyq3asbqgo"

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_3smsa")
player = NodePath("../..")
metadata/_custom_type_script = "uid://dg6fyq3asbqgo"

[node name="Dash" type="Node" parent="StateMachine" node_paths=PackedStringArray("dash_timer", "dash_cool_down", "player")]
script = ExtResource("7_y4r1p")
dash_speed = 1350.0
dash_timer = NodePath("../../Timers/DashTimer")
dash_cool_down = NodePath("../../Timers/DashCoolDown")
player = NodePath("../..")
metadata/_custom_type_script = "uid://dg6fyq3asbqgo"

[node name="Dead" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("11_jej6c")
player = NodePath("../..")
metadata/_custom_type_script = "uid://dg6fyq3asbqgo"

[node name="Timers" type="Node" parent="."]

[node name="JumpTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true
script = ExtResource("8_8erm5")

[node name="CoyoteTimer" type="Timer" parent="Timers" node_paths=PackedStringArray("player")]
wait_time = 0.12
one_shot = true
script = ExtResource("9_ur7pv")
player = NodePath("../..")

[node name="DashTimer" type="Timer" parent="Timers"]
wait_time = 0.12
one_shot = true

[node name="DashCoolDown" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Timers/DashTimer" to="StateMachine/Dash" method="_on_dash_timer_timeout"]
